Included Commons Lang to optimize code and JDK 8 support.